--- a/views/about.ejs
+++ b/views/about.ejs
@@ -38,7 +38,7 @@
     <p
       class="text-white leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
     >
-      We are M.P. MaitriMony as a leading provider of grassroots network and
+      We are Manya MatriMony as a leading provider of grassroots network and
       online matchmaking services, has been providing matrimonial services since
       2014 especially to the users in urban and rural areas of Madhya Pradesh
       and all over India because we understand the importance of choosing a
@@ -85,12 +85,12 @@
       can choose who is eligible to contact you. This saves you from wasting
       time reviewing incompatible profiles. Our unique matchmaking system will
       ensure that you meet only the most suitable candidates. This system is
-      only for M.P.Matrimony and is not available on other matrimonial sites.
+      only for ManyaMatrimony and is not available on other matrimonial sites.
     </p>
     <p
       class="text-white leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
     >
-      Since M.P.Matrimony aims to provide the best service at a relatively low
+      Since ManyaMatrimony aims to provide the best service at a relatively low
       price, is a popular service, so we receive more new profiles than other
       sites. This increases your chances of finding your life partner
     </p>
