--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,22 +2,22 @@
   class="navbox absolute top-0 left-0 h-[5vmax] w-full bg-[#fff] flex items-center justify-between px-[5vmax] text-[#fff] z-10 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax] overflow-hidden"
 >
   <img
-    src="/images/logo.jpg"
+    src="/images/manya-logo.jpg"
     alt=""
-    class="h-[90%] object-cover ml-[-.3vmax] max-sm:h-[7vmax] max-sm:ml-[-.4vmax]"
+    class="h-[150%] object-cover mt-[.8vmax] max-sm:h-[7vmax] max-sm:ml-[-.4vmax]"
   />
   <div
     class="linkbox absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] flex gap-[2.5vmax] max-sm:hidden"
   >
     <a href="/" class="text-[1vmax] font-medium text-[#800000]">Home</a>
     <a href="/about" class="text-[1vmax] font-medium text-[#800000]"
-      >About Us</a
-    >
-    <a href="/contact" class="text-[1vmax] font-medium text-[#800000]"
-      >Contact</a
+      >About us</a
     >
     <a href="/memberships" class="text-[1vmax] font-medium text-[#800000]"
       >Memberships</a
+    >
+    <a href="/contact" class="text-[1vmax] font-medium text-[#800000]"
+      >Contact us</a
     >
     <a href="/privacy-policy" class="text-[1vmax] font-medium text-[#800000]"
       >Privacy policy</a
