--- a/public/stylesheets/output.css
+++ b/public/stylesheets/output.css
@@ -598,18 +598,6 @@ video {
   top: 8vmax;
 }
 
-.top-\[\] {
-  top: ;
-}
-
-.top-\[-30\] {
-  top: -30;
-}
-
-.top-\[-30\%\] {
-  top: -30%;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -650,6 +638,10 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-\[-15vmax\] {
+  margin-top: -15vmax;
+}
+
 .mt-\[\.5vmax\] {
   margin-top: .5vmax;
 }
@@ -686,28 +678,40 @@ video {
   margin-top: 4vmax;
 }
 
-.mt-\[-\] {
-  margin-top: -;
+.mt-\[\.8vmax\] {
+  margin-top: .8vmax;
 }
 
-.mt-\[-10vmax\] {
-  margin-top: -10vmax;
+.ml-\[-\.1vmax\] {
+  margin-left: -.1vmax;
 }
 
-.mt-\[30vmax\] {
-  margin-top: 30vmax;
+.ml-\[-\.5vmax\] {
+  margin-left: -.5vmax;
 }
 
-.mt-\[-30vmax\] {
-  margin-top: -30vmax;
+.ml-\[-\.0vmax\] {
+  margin-left: -.0vmax;
 }
 
-.mt-\[-20vmax\] {
-  margin-top: -20vmax;
+.ml-\[-vmax\] {
+  margin-left: -vmax;
 }
 
-.mt-\[-15vmax\] {
-  margin-top: -15vmax;
+.ml-\[-1vmax\] {
+  margin-left: -1vmax;
+}
+
+.ml-\[-2vmax\] {
+  margin-left: -2vmax;
+}
+
+.ml-\[-5vmax\] {
+  margin-left: -5vmax;
+}
+
+.ml-\[5vmax\] {
+  margin-left: 5vmax;
 }
 
 .block {
@@ -756,6 +760,30 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[95\%\] {
+  height: 95%;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[110\%\] {
+  height: 110%;
+}
+
+.h-\[120\%\] {
+  height: 120%;
+}
+
+.h-\[140\%\] {
+  height: 140%;
+}
+
+.h-\[150\%\] {
+  height: 150%;
 }
 
 .min-h-screen {
@@ -876,12 +904,28 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .border-2 {
   border-width: 2px;
 }
 
+.border-4 {
+  border-width: 4px;
+}
+
 .border-\[2px\] {
   border-width: 2px;
+}
+
+.border-\[1\.5px\] {
+  border-width: 1.5px;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .border-b-2 {
@@ -903,6 +947,11 @@ video {
 .border-\[\#800000\] {
   --tw-border-opacity: 1;
   border-color: rgb(128 0 0 / var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-white {
@@ -954,6 +1003,163 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#FE9F01\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 159 1 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F00C40\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 12 64 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f4aa33\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 170 51 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FDA100\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 161 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#8f1a1a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(143 26 26 / var(--tw-bg-opacity));
+}
+
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.bg-rose-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 113 133 / var(--tw-bg-opacity));
+}
+
+.bg-orange-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
+
+.bg-orange-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+}
+
+.bg-blue-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
+.bg-blue-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F2E8C6\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 232 198 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#973131\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(151 49 49 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#DAD4B5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(218 212 181 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#71717A\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(113 113 122 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#433878\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 56 120 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#E4B1F0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(228 177 240 / var(--tw-bg-opacity));
+}
+
+.bg-blue-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 58 138 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#aa0000\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(170 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[\] {
+  background-color: ;
+}
+
+.bg-\[\#bc8f8f\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(188 143 143 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#e5afaf\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 175 175 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#ffaaaa\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 170 170 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#\] {
+  background-color: #;
+}
+
+.bg-\[\#\#E8AA42\] {
+  background-color: ##E8AA42;
+}
+
+.bg-\[\#E8AA42\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 170 66 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#aa0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(170 170 0 / var(--tw-bg-opacity));
+}
+
+.bg-orange-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#e5af52\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 175 82 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#e5ad4d\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 173 77 / var(--tw-bg-opacity));
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -978,6 +1184,14 @@ video {
 
 .p-\[4vmax\] {
   padding: 4vmax;
+}
+
+.p-\[2vmax\] {
+  padding: 2vmax;
+}
+
+.p-\[2\.5vmax\] {
+  padding: 2.5vmax;
 }
 
 .px-\[\.5vmax\] {
@@ -1045,6 +1259,51 @@ video {
   padding-bottom: 8vmax;
 }
 
+.py-\[\] {
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-\[\] {
+  padding-left: ;
+  padding-right: ;
+}
+
+.px-\[2vmax\] {
+  padding-left: 2vmax;
+  padding-right: 2vmax;
+}
+
+.px-\[vmax\] {
+  padding-left: vmax;
+  padding-right: vmax;
+}
+
+.px-\[3vmax\] {
+  padding-left: 3vmax;
+  padding-right: 3vmax;
+}
+
+.px-\[4vmax\] {
+  padding-left: 4vmax;
+  padding-right: 4vmax;
+}
+
+.px-\[3\.5vmax\] {
+  padding-left: 3.5vmax;
+  padding-right: 3.5vmax;
+}
+
+.px-\[3\.8vmax\] {
+  padding-left: 3.8vmax;
+  padding-right: 3.8vmax;
+}
+
 .pb-\[3px\] {
   padding-bottom: 3px;
 }
@@ -1067,6 +1326,14 @@ video {
 
 .pt-\[8vmax\] {
   padding-top: 8vmax;
+}
+
+.pt-\[2\.5vmax\] {
+  padding-top: 2.5vmax;
+}
+
+.pb-\[3\.5vmax\] {
+  padding-bottom: 3.5vmax;
 }
 
 .text-left {
@@ -1179,6 +1446,85 @@ video {
   color: rgb(113 113 122 / var(--tw-text-opacity));
 }
 
+.text-\[\#F00C40\] {
+  --tw-text-opacity: 1;
+  color: rgb(240 12 64 / var(--tw-text-opacity));
+}
+
+.text-\[\#FDA100\] {
+  --tw-text-opacity: 1;
+  color: rgb(253 161 0 / var(--tw-text-opacity));
+}
+
+.text-\[\#481111\] {
+  --tw-text-opacity: 1;
+  color: rgb(72 17 17 / var(--tw-text-opacity));
+}
+
+.text-\[\#641717\] {
+  --tw-text-opacity: 1;
+  color: rgb(100 23 23 / var(--tw-text-opacity));
+}
+
+.text-\[\#831e1e\] {
+  --tw-text-opacity: 1;
+  color: rgb(131 30 30 / var(--tw-text-opacity));
+}
+
+.text-\[\#b92b2b\] {
+  --tw-text-opacity: 1;
+  color: rgb(185 43 43 / var(--tw-text-opacity));
+}
+
+.text-\[rgb\(185\2c 43\2c 43\)\] {
+  --tw-text-opacity: 1;
+  color: rgb(185 43 43 / var(--tw-text-opacity));
+}
+
+.text-\[rgb\(163\2c 38\2c 38\)\] {
+  --tw-text-opacity: 1;
+  color: rgb(163 38 38 / var(--tw-text-opacity));
+}
+
+.text-\[\#a32626\] {
+  --tw-text-opacity: 1;
+  color: rgb(163 38 38 / var(--tw-text-opacity));
+}
+
+.text-\[\#8d2020\] {
+  --tw-text-opacity: 1;
+  color: rgb(141 32 32 / var(--tw-text-opacity));
+}
+
+.text-\[\#8f1a1a\] {
+  --tw-text-opacity: 1;
+  color: rgb(143 26 26 / var(--tw-text-opacity));
+}
+
+.text-\[\#973131\] {
+  --tw-text-opacity: 1;
+  color: rgb(151 49 49 / var(--tw-text-opacity));
+}
+
+.text-\[\#433878\] {
+  --tw-text-opacity: 1;
+  color: rgb(67 56 120 / var(--tw-text-opacity));
+}
+
+.text-\[\#aa0000\] {
+  --tw-text-opacity: 1;
+  color: rgb(170 0 0 / var(--tw-text-opacity));
+}
+
+.text-\[\#E8AA42\] {
+  --tw-text-opacity: 1;
+  color: rgb(232 170 66 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
+}
+
 .shadow-none {
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
@@ -1210,6 +1556,16 @@ video {
 .placeholder\:text-zinc-500::placeholder {
   --tw-text-opacity: 1;
   color: rgb(113 113 122 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-black::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-black::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .hover\:bg-\[\#800000\]:hover {
