--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,46 +31,59 @@
       class="holder formHolder relative h-screen w-full flex flex-col items-center justify-center mt-[-15vmax] max-sm:p-[2.5vmax]"
     >
       <div
-        class="text-center bg-white p-[4vmax] pt-[3.5vmax] rounded-md z-10 max-sm:p-[2.5vmax] max-sm:w-full max-sm:pt-[2vmax] max-sm:pb-[3.5vmax]"
+        class="text-center bg-white p-[2.5vmax] pt-[3.5vmax] pb-[3.5vmax] rounded-md z-10 max-sm:p-[2.5vmax] max-sm:w-full max-sm:pt-[2vmax] max-sm:pb-[3.5vmax]"
       >
         <h1
-          class="text-[2vmax] text-white text-center tracking-tight max-sm:text-[3vmax] bg-[#800000]"
+          class="text-[2vmax] text-white text-center tracking-tight py-[.5vmax] rounded-md max-sm:text-[3vmax] bg-[#800000]"
         >
           Register for free
         </h1>
         <form action="/user/login" method="post">
           <input
             type="text"
-            name="username"
-            placeholder="Username"
+            name="name"
+            placeholder="Full name"
             required
-            class="usernameInput block p-[.8vmax] w-[25vmax] outline-none mt-[1.5vmax] rounded-md placeholder:text-zinc-500 max-sm:w-full max-sm:py-[1.5vmax] max-sm:px-[1.3vmax] max-sm:mt-[2vmax] max-sm:text-[2vmax]"
+            class="usernameInput block p-[.8vmax] w-[25vmax] outline-none mt-[2vmax] rounded-md placeholder:text-black border-2 border-black bo max-sm:w-full max-sm:py-[1.5vmax] max-sm:px-[1.3vmax] max-sm:mt-[2vmax] max-sm:text-[2vmax]"
           />
+          <div class="mt-[1vmax] max-sm:mt-[2vmax]">
+            <div class="flex gap-[1.5vmax] mt-1 max-sm:gap-[2.5vmax]">
+              <div class="radiobox flex gap-[.4vmax] max-sm:gap-[.6vmax]">
+                <input
+                  type="radio"
+                  id="male"
+                  name="gender"
+                  value="Male"
+                  class=""
+                  required
+                /><label class="max-sm:text-[2vmax]" for="male">Male</label>
+              </div>
+              <div class="radiobox flex gap-[.4vmax] max-sm:gap-[.6vmax]">
+                <input
+                  type="radio"
+                  id="female"
+                  name="gender"
+                  value="Female"
+                  class=""
+                  required
+                /><label class="max-sm:text-[2vmax]" for="female">Female</label>
+              </div>
+            </div>
+          </div>
           <input
-            type="password"
-            name="password"
-            placeholder="Password"
+            type="text"
+            name="mobileNumber"
+            placeholder="Mobile number"
             required
-            class="passwordInput block p-[.8vmax] w-[25vmax] outline-none mt-[1vmax] rounded-md placeholder:text-zinc-500 max-sm:w-full max-sm:py-[1.5vmax] max-sm:px-[1.3vmax] max-sm:mt-[1.5vmax] max-sm:text-[2vmax]"
+            class="passwordInput block p-[.8vmax] w-[25vmax] outline-none mt-[1vmax] rounded-md placeholder:text-black border-2 border-black max-sm:w-full max-sm:py-[1.5vmax] max-sm:px-[1.3vmax] max-sm:mt-[1.5vmax] max-sm:text-[2vmax]"
           />
           <button
             type="submit"
             class="block w-[100%] p-[1vmax] mt-[2vmax] bg-blue-600 text-white rounded-md max-sm:p-[1.5vmax] max-sm:mt-[3vmax] max-sm:text-[2vmax]"
           >
-            Login
+            Register now
           </button>
         </form>
-        <div
-          class="w-[25vmax] mt-[1.5vmax] text-left text-white max-sm:mt-[2.5vmax] max-sm:text-center max-sm:w-[100%] max-sm:text-[2vmax]"
-        >
-          Don't have an account?
-          <br />
-          <a
-            class="text-white border-b-[1px] border-white pb-[3px]"
-            href="/user/register"
-            >Create new account</a
-          >
-        </div>
       </div>
     </div>
   </div>
