--- a/views/membership.ejs
+++ b/views/membership.ejs
@@ -6,21 +6,21 @@
   <h1
     class="text-[3vmax] font-semibold text-zinc-500 tracking-tight border-b-2 border-zinc-300 w-full py-2 max-sm:text-[4vmax] max-sm:py-3"
   >
-    Membership <span class="text-[#800000]">packages</span>
+    Membership <span class="text-[#aa0000]">packages</span>
   </h1>
   <div
     class="packagesHolder w-full flex gap-[2.5vmax] py-[5vmax] max-sm:flex-col max-sm:gap-[5vmax]"
   >
     <div
-      class="package1 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-red-100"
+      class="package1 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-[#e5ad4d]"
     >
       <h4
-        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
+        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#aa0000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
       >
         Gold Plan
       </h4>
       <div
-        class="pricebox relative w-[89%] bg-[#800000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
+        class="pricebox relative w-[89%] bg-[#aa0000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
       >
         <h5
           class="text-[1.1vmax] font-semibold text-white tracking-tight absolute top-[1vmax] left-[1vmax] max-sm:text-[1.8vmax] max-sm:top-[1.5vmax] max-sm:left-[1.5vmax]"
@@ -43,7 +43,7 @@
         </h5>
       </div>
       <div
-        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#800000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
+        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#aa0000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
       >
         <h4
           class="text-[2vmax] font-semibold text-white tracking-tight w-full text-center max-sm:text-[3vmax]"
@@ -77,21 +77,24 @@
         </h5>
       </div>
       <button
-        class="w-full h-[5vmax] bg-blue-600 text-white border-none mt-[2vmax] text-[1.3vmax] max-sm:h-[7vmax] max-sm:text-[2.3vmax] max-sm:mt-[2.5vmax]"
+        class="w-full h-[5vmax] bg-[#aa0000] text-white border-none mt-[2vmax] max-sm:h-[7vmax] max-sm:text-[2.3vmax] max-sm:mt-[2.5vmax]"
       >
-        Pay Now
+        <span
+          class="text-[1.1vmax] border-2 border-white py-[.5vmax] px-[2.5vmax] rounded-full member-button"
+          >Pay Now</span
+        >
       </button>
     </div>
     <div
-      class="package2 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-red-100"
+      class="package2 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-[#e5ad4d]"
     >
       <h4
-        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
+        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#aa0000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
       >
         Diamond Plan
       </h4>
       <div
-        class="pricebox relative w-[89%] bg-[#800000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
+        class="pricebox relative w-[89%] bg-[#aa0000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
       >
         <h5
           class="text-[1.1vmax] font-semibold text-white tracking-tight absolute top-[1vmax] left-[1vmax] max-sm:text-[1.8vmax] max-sm:top-[1.5vmax] max-sm:left-[1.5vmax]"
@@ -114,7 +117,7 @@
         </h5>
       </div>
       <div
-        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#800000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
+        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#aa0000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
       >
         <h4
           class="text-[2vmax] font-semibold text-white tracking-tight w-full text-center max-sm:text-[3vmax]"
@@ -154,21 +157,24 @@
         </h5>
       </div>
       <button
-        class="w-full h-[5vmax] bg-blue-600 text-white border-none mt-[2vmax] text-[1.3vmax] max-sm:h-[7vmax] max-sm:text-[2.3vmax] max-sm:mt-[2.5vmax]"
+        class="w-full h-[5vmax] bg-[#aa0000] text-white border-none mt-[2vmax] max-sm:h-[7vmax] max-sm:text-[2.3vmax] max-sm:mt-[2.5vmax]"
       >
-        Pay Now
+        <span
+          class="member-button text-[1.1vmax] border-2 border-white py-[.5vmax] px-[2.5vmax] rounded-full"
+          >Pay Now</span
+        >
       </button>
     </div>
     <div
-      class="package3 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-red-100"
+      class="package3 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-[#e5ad4d]"
     >
       <h4
-        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
+        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#aa0000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
       >
         Platinum Plan
       </h4>
       <div
-        class="pricebox relative w-[89%] bg-[#800000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
+        class="pricebox relative w-[89%] bg-[#aa0000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
       >
         <h5
           class="text-[1.1vmax] font-semibold text-white tracking-tight absolute top-[1vmax] left-[1vmax] max-sm:text-[1.8vmax] max-sm:top-[1.5vmax] max-sm:left-[1.5vmax]"
@@ -191,7 +197,7 @@
         </h5>
       </div>
       <div
-        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#800000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
+        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#aa0000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
       >
         <h4
           class="text-[2vmax] font-semibold text-white tracking-tight w-full text-center max-sm:text-[3vmax]"
@@ -231,9 +237,12 @@
         </h5>
       </div>
       <button
-        class="w-full h-[5vmax] bg-blue-600 text-white border-none mt-[2vmax] text-[1.3vmax] max-sm:h-[7vmax] max-sm:text-[2.3vmax] max-sm:mt-[2.5vmax]"
+        class="w-full h-[5vmax] bg-[#aa0000] text-white border-none mt-[2vmax] max-sm:h-[7vmax] max-sm:text-[2.3vmax] max-sm:mt-[2.5vmax]"
       >
-        Pay Now
+        <span
+          class="member-button text-[1.1vmax] border-2 border-white py-[.5vmax] px-[2.5vmax] rounded-full"
+          >Pay Now</span
+        >
       </button>
     </div>
   </div>
@@ -241,15 +250,15 @@
     class="packagesHolder w-full flex gap-[2.5vmax] max-sm:flex-col max-sm:gap-[5vmax]"
   >
     <div
-      class="package4 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-red-100"
+      class="package4 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-[#e5ad4d]"
     >
       <h4
-        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
+        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#aa0000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
       >
         Platinum + Plan
       </h4>
       <div
-        class="pricebox relative w-[89%] bg-[#800000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
+        class="pricebox relative w-[89%] bg-[#aa0000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
       >
         <h5
           class="text-[1.1vmax] font-semibold text-white tracking-tight absolute top-[1vmax] left-[1vmax] max-sm:text-[1.8vmax] max-sm:top-[1.5vmax] max-sm:left-[1.5vmax]"
@@ -272,7 +281,7 @@
         </h5>
       </div>
       <div
-        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#800000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
+        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#aa0000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
       >
         <h4
           class="text-[2vmax] font-semibold text-white tracking-tight w-full text-center max-sm:text-[3vmax]"
@@ -312,21 +321,24 @@
         </h5>
       </div>
       <button
-        class="w-full h-[5vmax] bg-blue-600 text-white border-none mt-[2vmax] text-[1.3vmax] max-sm:h-[7vmax] max-sm:text-[2.3vmax] max-sm:mt-[2.5vmax]"
+        class="w-full h-[5vmax] bg-[#aa0000] text-white border-none mt-[2vmax] max-sm:h-[7vmax] max-sm:text-[2.3vmax] max-sm:mt-[2.5vmax]"
       >
-        Pay Now
+        <span
+          class="member-button text-[1.1vmax] border-2 border-white py-[.5vmax] px-[2.5vmax] rounded-full"
+          >Pay Now</span
+        >
       </button>
     </div>
     <div
-      class="package5 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-red-100"
+      class="package5 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-[#e5ad4d]"
     >
       <h4
-        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
+        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#aa0000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
       >
         Exclusive Plan
       </h4>
       <div
-        class="pricebox relative w-[89%] bg-[#800000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
+        class="pricebox relative w-[89%] bg-[#aa0000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
       >
         <h5
           class="text-[1.5vmax] font-semibold text-white tracking-tight text-center max-sm:text-[2.3vmax]"
@@ -345,7 +357,7 @@
         </h5>
       </div>
       <div
-        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#800000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
+        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#aa0000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
       >
         <h4
           class="text-[2vmax] font-semibold text-white tracking-tight w-full text-center max-sm:text-[3vmax]"
@@ -385,9 +397,12 @@
         </h5>
       </div>
       <button
-        class="w-full h-[5vmax] bg-blue-600 text-white border-none mt-[2vmax] text-[1.3vmax] max-sm:h-[7vmax] max-sm:text-[2.3vmax] max-sm:mt-[2.5vmax]"
+        class="w-full h-[5vmax] bg-[#aa0000] text-white border-none mt-[2vmax] max-sm:h-[7vmax] max-sm:text-[2.3vmax] max-sm:mt-[2.5vmax]"
       >
-        Pay Now
+        <span
+          class="member-button text-[1.1vmax] border-2 border-white py-[.5vmax] px-[2.5vmax] rounded-full"
+          >Pay Now</span
+        >
       </button>
     </div>
     <div
@@ -423,7 +438,10 @@
       <button
         class="w-1/2 py.91vmax] bg-white text-white border-none rounded-xl mt-[2vmax] text-[1.5v3ax]"
       >
-        Pay Now
+        <span
+          class="member-button text-[1.1vmax] border-2 border-white py-[.5vmax] px-[2.5vmax] rounded-full"
+          >Pay Now</span
+        >
       </button>
     </div>
   </div>
