--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,21 +6,21 @@
   >
     <div class="imgbox1 absolute top-0 left-0 z-[3] h-full w-full">
       <img
-        src="/images/phere.jpeg"
+        src="/images/rasam1.jpeg"
         alt=""
         class="h-full w-full object-cover object-center"
       />
     </div>
     <div class="imgbox2 absolute top-0 left-[100%] z-[2] h-full w-full">
       <img
-        src="/images/rasam1.jpeg"
+        src="/images/rasam2.jpeg"
         alt=""
         class="h-full w-full object-cover object-center"
       />
     </div>
     <div class="imgbox3 absolute top-0 left-[100%] z-[1] h-full w-full">
       <img
-        src="/images/rasam2.jpeg"
+        src="/images/rasam3.jpeg"
         alt=""
         class="h-full w-full object-cover object-center"
       />
@@ -38,7 +38,7 @@
         >
           Register for free
         </h1>
-        <form action="/user/login" method="post">
+        <form action="/user/grab-attention" method="post">
           <input
             type="text"
             name="name"
