--- a/views/userRegister.ejs
+++ b/views/userRegister.ejs
@@ -21,6 +21,7 @@
         type="text"
         name="name"
         placeholder="Full Name"
+        value="<%=name%>"
         class="block p-[.8vmax] w-[100%] outline-none mt-[1.5vmax] rounded-md placeholder:text-zinc-500 max-sm:py-[1.5vmax] max-sm:px-[1.3vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]"
       />
       <input
@@ -448,6 +449,7 @@
         type="text"
         name="mobileNumber"
         placeholder="Mobile number"
+        value="<%=mobileNumber%>"
         class="block p-[.8vmax] w-[100%] outline-none mt-[1vmax] rounded-md placeholder:text-zinc-500 max-sm:py-[1.5vmax] max-sm:px-[1.3vmax] max-sm:text-[2vmax] max-sm:mt-[1.5vmax]"
       />
       <input
