--- a/views/about.ejs
+++ b/views/about.ejs
@@ -38,7 +38,7 @@
     <p
       class="text-white leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
     >
-      We are Manya MatriMony as a leading provider of grassroots network and
+      We are Manya Matrimony as a leading provider of grassroots network and
       online matchmaking services, has been providing matrimonial services since
       2014 especially to the users in urban and rural areas of Madhya Pradesh
       and all over India because we understand the importance of choosing a
