--- a/views/privacy-policy.ejs
+++ b/views/privacy-policy.ejs
@@ -9,9 +9,7 @@
     Privacy <span class="text-[#800000]">policy</span>
   </h1>
   <div class="privacy-contentbox">
-    <p
-      class="text-[1.3vmax] mt-[2vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[2vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       At Manya Matrimony, we prioritize your privacy. This privacy policy
       outlines how we collect, use, and protect your personal information in
       compliance with applicable privacy laws. By using our website, you agree
@@ -21,37 +19,27 @@
     <h3 class="text-[1.5vmax] font-semibold mt-[3vmax] max-sm:text-[3vmax]">
       Information We Collect
     </h3>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       We collect various types of information to provide and improve our
       services to you, including:
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       <span class="font-semibold">Personal Information:</span> When you register
       or interact with the website, we collect personal details such as your
       name, email address, phone number, gender, religion, marital status, date
       of birth, and preferences.
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       <span class="font-semibold">Profile Information:</span> You may provide
       additional personal information when creating your profile, such as your
       occupation, education, interests, and preferences for a potential match.
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       <span class="font-semibold">Usage Data:</span> We collect information
       about how you use our website, including pages visited, time spent, and
       other diagnostic data to help us improve the user experience.
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       <span class="font-semibold">Communications:</span> Information about
       messages you send or receive through the website.
     </p>
@@ -59,61 +47,41 @@
     <h3 class="text-[1.5vmax] font-semibold mt-[3vmax] max-sm:text-[3vmax]">
       Use of Information
     </h3>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       We use your personal information to:
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       • Provide matchmaking services.
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       • Improve and personalize your experience on our website.
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       • Send you notifications about matches, messages, and updates.
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       • Conduct surveys and collect feedback for service improvement.
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       • Ensure the security and proper functioning of our website.
     </p>
     <h3 class="text-[1.5vmax] font-semibold mt-[3vmax] max-sm:text-[3vmax]">
       Information Sharing
     </h3>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       We do not share your personal information with third parties, except in
       the following circumstances:
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       <span class="font-semibold">With Your Consent:</span> We may share your
       information with other users as per your privacy settings (e.g., profile
       visibility).
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       <span class="font-semibold">Legal Requirements:</span> If required by law
       or in response to valid legal requests.
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       <span class="font-semibold">Service Providers:</span> We may employ
       third-party services for hosting, maintenance, or analytics, and they may
       access your information solely for performing their services on our
@@ -123,9 +91,7 @@
     <h3 class="text-[1.5vmax] font-semibold mt-[3vmax] max-sm:text-[3vmax]">
       Data Security
     </h3>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       We take data protection seriously and employ appropriate security measures
       to safeguard your personal information from unauthorized access,
       alteration, or disclosure. However, no online system is completely secure,
@@ -135,9 +101,7 @@
     <h3 class="text-[1.5vmax] font-semibold mt-[3vmax] max-sm:text-[3vmax]">
       Cookies and Tracking Technologies
     </h3>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       We use cookies and similar technologies to collect usage data, enhance
       website performance, and personalize your experience. You can manage your
       cookie preferences through your browser settings.
@@ -146,9 +110,7 @@
     <h3 class="text-[1.5vmax] font-semibold mt-[3vmax] max-sm:text-[3vmax]">
       Data Retention
     </h3>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       We retain your personal information for as long as necessary to provide
       our services or as required by law. You may request the deletion of your
       data by contacting us.
@@ -157,38 +119,26 @@
     <h3 class="text-[1.5vmax] font-semibold mt-[3vmax] max-sm:text-[3vmax]">
       Your Rights
     </h3>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       You have the right to:
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       • Access, update, or delete your personal information.
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       • Withdraw your consent to the processing of your data.
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       • Request a copy of the data we hold about you.
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       • File a complaint with the relevant data protection authority.
     </p>
     <!--  -->
     <h3 class="text-[1.5vmax] font-semibold mt-[3vmax] max-sm:text-[3vmax]">
       Changes to This Privacy Policy
     </h3>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       We may update this privacy policy from time to time. Any changes will be
       posted on this page, and your continued use of the website after the
       changes will signify your acceptance of the revised policy.
@@ -197,25 +147,17 @@
     <h3 class="text-[1.5vmax] font-semibold mt-[3vmax] max-sm:text-[3vmax]">
       Contact Us
     </h3>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       If you have any questions about this privacy policy or your personal
       information, please contact us at:
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       <span class="font-semibold">Email:</span>
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       <span class="font-semibold">Mobile number:</span>
     </p>
-    <p
-      class="text-[1.3vmax] mt-[1vmax] max-sm:text-[1.8vmax] max-sm:mt-[2vmax]"
-    >
+    <p class="text-[1.3vmax] mt-[1vmax] max-sm:text-[2vmax] max-sm:mt-[2vmax]">
       <span class="font-semibold">Address:</span>
     </p>
   </div>
