--- a/views/userRegister.ejs
+++ b/views/userRegister.ejs
@@ -385,6 +385,7 @@
           <option value="Graduate">Graduate</option>
           <option value="Post Graduate">Post Graduate</option>
           <option value="Professional Degree">Professional Degree</option>
+          <option value="Diploma">Diploma</option>
         </select>
       </div>
       <div class="mt-[1vmax] max-sm:mt-[1.5vmax]">
@@ -398,7 +399,7 @@
           <option value="Private">Private</option>
           <option value="Business">Business</option>
           <option value="Defence">Defence</option>
-          <option value="Defence">Farmer</option>
+          <option value="Farmer">Farmer</option>
           <option value="Not working">Not working</option>
         </select>
       </div>
